[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/ExK_p7wVoAg_Rij.png" type="Texture" id=1]
[ext_resource path="res://Assets/Mechsuit.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Actor/Characters/OldMan/Faceset.png" type="Texture" id=3]
[ext_resource path="res://Assets/Actor/Characters/Eskimo/Faceset.png" type="Texture" id=4]
[ext_resource path="res://Assets/Actor/Characters/RedNinja/Faceset.png" type="Texture" id=5]
[ext_resource path="res://Assets/Actor/Characters/MaskFrog/Faceset.png" type="Texture" id=6]
[ext_resource path="res://Assets/Actor/Characters/Villager2/Faceset.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menu/CharacterStats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/antilles.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Actor/Characters/Eskimo/Faceset-focus.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Menu/SelectSquad.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 3
outline_color = Color( 0.113725, 0.427451, 0.286275, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 9 )

[node name="SelectSquad" type="Node2D"]
script = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 319.5, 179 )
scale = Vector2( 0.671875, 0.674074 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Sprite2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -270.0
margin_right = -480.0
margin_bottom = -270.0
custom_constants/margin_right = 120
custom_constants/margin_left = 120

[node name="ColorRect" type="ColorRect" parent="Sprite2/MarginContainer"]
margin_left = 120.0
margin_right = 840.0
margin_bottom = 540.0
grow_horizontal = 0
color = Color( 0.054902, 0.0666667, 0.0588235, 0.941176 )

[node name="MarginContainer" type="MarginContainer" parent="Sprite2/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer"]
margin_top = 30.0
margin_right = 720.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( -582.884, 65.2747 )

[node name="Label" type="Label" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Squad selection"
align = 1
uppercase = true

[node name="SelectedCharacters" type="HBoxContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 720.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectCharacter" type="HBoxContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 720.0
margin_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2
custom_constants/separation = 16
alignment = 1

[node name="TextureButton2" type="TextureButton" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/SelectCharacter"]
margin_left = 233.0
margin_right = 271.0
margin_bottom = 38.0
texture_normal = ExtResource( 6 )

[node name="TextureButton3" type="TextureButton" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/SelectCharacter"]
margin_left = 287.0
margin_right = 325.0
margin_bottom = 38.0
texture_normal = ExtResource( 3 )

[node name="TextureButton4" type="TextureButton" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/SelectCharacter"]
margin_left = 341.0
margin_right = 379.0
margin_bottom = 38.0
texture_normal = ExtResource( 5 )

[node name="TextureButton5" type="TextureButton" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/SelectCharacter"]
margin_left = 395.0
margin_right = 433.0
margin_bottom = 38.0
texture_normal = ExtResource( 7 )

[node name="Eskimo" type="TextureButton" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/SelectCharacter"]
margin_left = 449.0
margin_right = 487.0
margin_bottom = 38.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 10 )

[node name="Infos" type="HBoxContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 720.0
margin_bottom = 345.0
size_flags_horizontal = 9
custom_constants/separation = 20
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos"]
margin_bottom = 26.0

[node name="HBoxContainer" type="HBoxContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos"]
margin_left = 20.0
margin_right = 137.0
margin_bottom = 26.0
size_flags_horizontal = 2

[node name="Label" type="Label" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos/HBoxContainer"]
margin_top = 3.0
margin_right = 64.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "A: Select"

[node name="Label2" type="Label" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos/HBoxContainer"]
margin_left = 68.0
margin_top = 3.0
margin_right = 117.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "S: Info"

[node name="HBoxContainer2" type="HBoxContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos"]
margin_left = 591.0
margin_right = 700.0
margin_bottom = 26.0

[node name="BackButton" type="Button" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="MarginContainer3" type="MarginContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos/HBoxContainer2"]
margin_left = 51.0
margin_right = 51.0
margin_bottom = 26.0

[node name="StartButton" type="Button" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos/HBoxContainer2"]
margin_left = 55.0
margin_right = 109.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer/Infos"]
margin_left = 720.0
margin_right = 720.0
margin_bottom = 26.0

[node name="ColorRect" parent="Sprite2/MarginContainer/ColorRect/MarginContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 349.0
